--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
       prefix: /
       suffix: .jsp
   datasource:
-    url: jdbc:mysql://172.19.1.110:3306/demo
+    url: jdbc:mysql://139.9.35.139:3306/demo
     username: root
-    password: fangang12321
+    password: 1234
     type: com.alibaba.druid.pool.DruidDataSource
 mybatis:
   mapperLocations: classpath:mapper/*Mapper.xml
