1)improve query with join and reference. 2)improve read xml files

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+    
+  	<dependency>
+  		<groupId>com.demo</groupId>
+  		<artifactId>demo-service2-support</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
 
     <!-- spring boot test-->
     <dependency>
