fix the bug about time zone.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,15 @@ server:
 spring:
   application:
     name: service-trade
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   mvc:
     view:
       prefix: /
       suffix: .jsp
   datasource:
-    url: jdbc:mysql://47.105.194.89:32306/demo
+    url: jdbc:mysql://47.105.194.89:32306/demo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     username: root
     password: 1234
     type: com.alibaba.druid.pool.DruidDataSource
